# HexBot

./: README.md  frames_2025-02-06_23.46.43.gv  serial_map.data
navigation_slambot/: CMakeLists.txt  package.xml
navigation_slambot/config/: copy.txt  nav2_params.yaml  new_map.pgm  new_map.yaml
navigation_slambot/launch/: navigation.launch.py
new_robot_controller/config/: joy_teleop.yaml
new_robot_description/urdf/: base_robot.xacro  base_robot_gazebo.xacro  camera.xacro
new_robot_firmware/firmware/robot_control/: robot_control.ino
new_robot_firmware/launch/: hardware_interface.launch.py
new_slam/: CMakeLists.txt
new_slam/launch/: slam.launch.py
src/hls_lfcd_lds_driver/launch/: hlds_laser.launch.py
src/hls_lfcd_lds_driver/src/: hlds_laser_publisher.cpp
src/navigation_slambot/config/: my_map.pgm  my_map.yaml  nav2_params.yaml
src/navigation_slambot/launch/: navigation.launch.py
src/new_practice_bringup/launch/: quick.launch.py  real_robot_bringup.launch.py
src/new_robot_controller/config/: joy_teleop.yaml  new_robot_controllers.yaml
src/new_robot_controller/launch/: joystick_teleop.launch.py  simple_controller.launch.py
src/new_robot_description/launch/: gazebo.launch.py
src/new_robot_description/urdf/: laser.xacro  my_robot.urdf.xacro  ros2_control.xacro
src/new_robot_firmware/firmware/robot_control/: robot_control.ino
src/new_slam/: package.xml
src/new_slam/config/: slam_toolbox.yaml
src/vfh/: package.xml  setup.cfg  setup.py
src/vfh/launch/: vfh.launch.py
src/vfh/vfh/: controller.py  cost_map.py  current_position.py  vfh_1.py  vfh_3.py  vfh_obstacle_avoidance.py  vfh_old.py
src/vfh_msgs/: CMakeLists.txt  package.xml
src/vfh_msgs/srv/: ObstacleAvoidanceService.srv
